--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,8 +24,15 @@ jobs:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Install dependencies
-        run: npm ci --no-audit --no-fund
+      - name: Install dependencies (workspaces)
+        run: npm install --no-audit --no-fund
+
+      - name: Configure npm auth
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          npm config set //registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}
+          npm whoami || true
 
       - name: Build SDK workspaces
         run: npm run build:sdk
