--- a/packages/core-client/package.json
+++ b/packages/core-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@agentiq/core-client",
+  "name": "@qriptoagentiq/core-client",
   "version": "0.1.1",
   "private": false,
   "main": "dist/index.js",
