--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,15 @@ jobs:
           npm config set //registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}
           npm whoami || true
 
+      - name: Diagnostics (npm access)
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          echo "Listing packages for current user (may be limited):"
+          npm access ls-packages 2>/dev/null || true
+          echo "npm config list:"
+          npm config list -l | sed -n '1,120p'
+
       - name: Build SDK workspaces
         run: npm run build:sdk
 
