--- a/packages/kn0w1-client/package.json
+++ b/packages/kn0w1-client/package.json
@@ -10,6 +10,9 @@
       "default": "./dist/index.js"
     }
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsc -b",
     "prepublishOnly": "npm run build"
