--- a/packages/a2a-client/package.json
+++ b/packages/a2a-client/package.json
@@ -10,6 +10,9 @@
       "default": "./dist/index.js"
     }
   },
+  "files": [
+    "dist"
+  ],
   "publishConfig": {
     "access": "public"
   },
