--- a/packages/kn0w1-client/package.json
+++ b/packages/kn0w1-client/package.json
@@ -11,14 +11,17 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "package.json",
+    "README.md"
   ],
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
     "build": "tsc -b",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "prepack": "npm run build"
   },
   "dependencies": {},
   "devDependencies": {
